--- a/views/partials/_navbar.handlebars
+++ b/views/partials/_navbar.handlebars
@@ -1,28 +1,5 @@
-<nav class="navbar navbar-expand-sm navbar-light bg-light mb-3">
+<nav class="navbar navbar-expand-sm navbar-light mb-3" style="background-color: #00cc44;">
     <div class="container">
-        <a class="navbar-brand" href="/">comenzi</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
-            aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-                <li class="nav-item active">
-                    <a class="nav-link" href="/">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/about">despre</a>
-                </li>
-            </ul>
-            <ul class="navbar-nav ml-auto">
-                <li class="nav-item dorpdown">
-                    <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" id="navbarDropdownMenuLink">Comenzi</a>
-                    <div class="dropdown-menu">
-                        <a href="/comenzi" class="dropdown-item">comenzi</a>
-                        <a href="/comenzi/add" class="dropdown-item">adauga comenzi</a>
-                    </div>
-                </li>
-            </ul>
-        </div>
+        <a class="navbar-brand" href="/">_comenzi</a>
     </div>
 </nav>
